--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@keyv/redis": "^4.4.0",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.2",
@@ -30,6 +32,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "10.0.0",
     "@types/pg": "^8.15.2",
+    "cacheable": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
