--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "10.0.0",
     "@types/pg": "^8.15.2",
+    "cache-manager-ioredis": "^2.1.0",
     "cacheable": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
+    "keyv": "^5.3.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.0",
