--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/throttler": "^2.0.1",
     "@nestjs/typeorm": "10.0.0",
     "@types/pg": "^8.15.2",
     "cache-manager-ioredis": "^2.1.0",
@@ -39,7 +40,9 @@
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
+    "helmet": "^8.1.0",
     "keyv": "^5.3.3",
+    "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.0",
