--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/throttler": "^2.0.1",
     "@nestjs/typeorm": "10.0.0",
     "@types/pg": "^8.15.2",
+    "body-parser": "^2.2.0",
     "cache-manager-ioredis": "^2.1.0",
     "cacheable": "^1.9.0",
     "class-transformer": "^0.5.1",
