--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 
-
 services:
   postgres:
-    image: postgres:15-alpine
+    image: postgres:13-alpine
     container_name: tourism_postgres
     environment:
      POSTGRES_USER: postgres
@@ -12,12 +11,6 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["executable", "arg"]
-      interval: 1m30s
-      timeout: 30s
-      retries: 5
-      start_period: 30s
     networks:
       - tourism_network
     restart: unless-stopped
@@ -59,6 +52,7 @@ services:
     command: npm run start:dev
 
 volumes:
+  postgres_data:
   redis_data:
 
 networks:
