--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       - .env
     volumes:
       - .:/usr/src/app
+      - /usr/src/app/dist 
       - /usr/src/app/node_modules
     networks:
       - tourism_network
