--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
+    "express-rate-limit": "^7.5.0",
     "helmet": "^8.1.0",
     "keyv": "^5.3.3",
     "nodemailer": "^7.0.3",
